--- a/src/timepicker.css
+++ b/src/timepicker.css
@@ -55,14 +55,17 @@ div.timepicker__droplist {
 }
 
 /* show minutes on hover over hour */
-.timegrid__hour:hover > .timegrid__min {
+.timegrid__hour:hover > .timegrid__minutes {
   transform: scale(1,1)
 }
 
-.timegrid__min {
+.timegrid__minutes {
   transform: scale(0,1)
 }
 
-.timegrid__min00, .timegrid__min15, .timegrid__min30, .timegrid__min45 {
+.timegrid__min {
   display: table-cell;
+}
+
+.timegrid__min00, .timegrid__min15, .timegrid__min30, .timegrid__min45 {
 }
