Moved most example page content into index.ejs

--- a/example/index.ejs
+++ b/example/index.ejs
@@ -5,6 +5,22 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <div id="root"></div>
+    <h1>Simple React Time Picker</h1>
+    <section>
+      <a href="https://github.com/dpalma/react-simple-time-picker">
+        <i class="fa fa-github"></i>
+        Source
+      </a>
+    </section>
+    <section>
+      <h2>Example</h2>
+      <div id="example"></div>
+    </section>
+    <section>
+      <h2>Installation and Usage</h2>
+    </section>
+    <section>
+      <h2>API</h2>
+    </section>
   </body>
 </html>
