Properly set title of example page

--- a/example/index.ejs
+++ b/example/index.ejs
@@ -5,7 +5,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <h1>Simple React Time Picker</h1>
+    <h1><%= htmlWebpackPlugin.options.title %></h1>
     <section>
       <a href="https://github.com/dpalma/react-simple-time-picker">
         <i class="fa fa-github"></i>
