--- a/src/timepicker.css
+++ b/src/timepicker.css
@@ -60,7 +60,7 @@ div.timepicker__droplist {
   transform: scale(1,1)
 }
 
-.timegrid__minutes {
+.timegrid__hourtext-unselected + .timegrid__minutes {
   transform: scale(0,1)
 }
 
@@ -69,6 +69,9 @@ div.timepicker__droplist {
 }
 
 .timegrid__min00, .timegrid__min15, .timegrid__min30, .timegrid__min45 {
+}
+
+.timegrid__hourtext-unselected, .timegrid__min-unselected {
 }
 
 .timegrid__hourtext-selected, .timegrid__min-selected {
