Added missing documentation header

--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -57,6 +57,7 @@ render() {
       </pre>
     </section>
     <section>
+      <h2>Properties</h2>
       <table class="api-doc-table">
         <thead>
           <tr><th>Property</th><th>Type</th><th>Description</th></tr>
